--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ PORT=5000
 POSTGRESS_USERNAME=<YOUR POSTGRESS_USERNAME>
 POSTGRESS_PASSWORD=<YOUR POSTGRESS_PASSWORD>
 POSTGRESS_DBNAME=<YOUR POSTGRESS_DBNAME>
+PGADMIN_DEFAULT_EMAIL=<YOUR PGADMIN_DEFAULT_EMAIL>
+PGADMIN_DEFAULT_PASSWORD=<YOUR PGADMIN_DEFAULT_PASSWORD>
