--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,19 @@ services:
   embedding-app:
     build: ./embedding
     ports:
-      - "${PORT}:${PORT}"
+      - "${EMBEDDING_APP_PORT}:${EMBEDDING_APP_PORT}"
     depends_on:
       - postgresql
     environment:
       - DATABASE_URL=postgresql://${POSTGRESS_USERNAME}:${POSTGRESS_PASSWORD}@postgresql:5432/${POSTGRESS_DBNAME}
+  chatbot:
+    build: .
+    ports:
+      - "${CHAT_APP_PORT}:${CHAT_APP_PORT}"
+    environment:
+      - DATABASE_URL=postgresql://${POSTGRESS_USERNAME}:${POSTGRESS_PASSWORD}@postgresql:5432/${POSTGRESS_DBNAME}
+    depends_on:
+      - postgresql
   postgresql:
     image: ankane/pgvector:latest
     environment:
@@ -15,7 +23,7 @@ services:
       POSTGRES_DB: ${POSTGRESS_DBNAME}
     volumes:
       - postgresql_data:/var/lib/postgresql/data       
-      - ./embedding/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"    
   pgadmin:
