--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-PORT=5000
+EMBEDDING_APP_PORT=<YOUR EMBEDDING_APP_PORT>
+CHAT_APP_PORT=<YOUR CHAT_APP_PORT>
 POSTGRESS_USERNAME=<YOUR POSTGRESS_USERNAME>
 POSTGRESS_PASSWORD=<YOUR POSTGRESS_PASSWORD>
 POSTGRESS_DBNAME=<YOUR POSTGRESS_DBNAME>
