Add simple chat frontend

--- a/embedding/.env.example
+++ b/embedding/.env.example
@@ -1,4 +1,4 @@
-PORT=5000
+PORT=<YOUR PORT>
 OPENAI_API_KEY=<YOUR OPENAI_API_KEY>
 EMBEDDING_MODEL=<YOUR EMBEDING_MODEL>
 POSTGRESS_USERNAME=<YOUR POSTGRESS_USERNAME>
