--- a/embedding/package.json
+++ b/embedding/package.json
@@ -1,6 +1,7 @@
 {
     "type": "module",
     "dependencies": {
+      "ejs": "^3.1.10",
       "dotenv": "^16.0.0",
       "express": "^4.18.0",
       "pg": "^8.8.0",
