--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -11,6 +11,7 @@
       "dotenv": "^16.0.0",
       "express": "^4.18.2",
       "openai": "^4.0.0",
-      "pg": "^8.13.1"
+      "pg": "^8.13.1",
+      "ejs": "^3.1.10"
     }
   }
