--- a/chatbot/.env.example
+++ b/chatbot/.env.example
@@ -1,4 +1,7 @@
 PORT=<YOUR PORT>
 OPENAI_API_KEY=<YOUR OPENAI_API_KEY>
 EMBEDDING_API_URL=<YOUR EMBEDDING_API_URL>
+COMPLETION_SYSTEM_PROMPT=<YOUR COMPLETION_SYSTEM_PROMPT>
 COMPLETION_MODEL=<YOUR COMPLETION_MODEL>
+DOCUMENT_SEARCH_CONTEXT=<YOUR DOCUMENT_SEARCH_CONTEXT>
+DOCUMENT_SEARCH_LIMIT=<YOUR DOCUMENT_SEARCH_LIMIT>
