--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,28 @@
 services:
   embedding-app:
-    build: ./embedding
+    build: 
+      context: ./embedding
+      # dockerfile: DockerfileDebug
+      dockerfile: Dockerfile
     ports:
       - "${EMBEDDING_APP_PORT}:${EMBEDDING_APP_PORT}"
+      # - "9229:9229"
     depends_on:
       - postgresql
     environment:
       - DATABASE_URL=postgresql://${POSTGRESS_USERNAME}:${POSTGRESS_PASSWORD}@postgresql:5432/${POSTGRESS_DBNAME}
   chatbot:
-    build: ./chatbot
+    build: 
+      context: ./chatbot
+      # dockerfile: DockerfileDebug
+      dockerfile: Dockerfile
     ports:
       - "${CHAT_APP_PORT}:${CHAT_APP_PORT}"
+      # - "9229:9229"
     environment:
       - DATABASE_URL=postgresql://${POSTGRESS_USERNAME}:${POSTGRESS_PASSWORD}@postgresql:5432/${POSTGRESS_DBNAME}
+    volumes:
+      - /var/www/ai/chatbot/src:/app/src
     depends_on:
       - postgresql
   postgresql:
