--- a/embedding/.env.example
+++ b/embedding/.env.example
@@ -4,3 +4,4 @@ EMBEDDING_MODEL=<YOUR EMBEDING_MODEL>
 POSTGRESS_USERNAME=<YOUR POSTGRESS_USERNAME>
 POSTGRESS_PASSWORD=<YOUR POSTGRESS_PASSWORD>
 POSTGRESS_DBNAME=<YOUR POSTGRESS_DBNAME>
+MAX_DOCUMENT_SIZE=<YOUR MAX_DOCUMENT_SIZE>
