Pass document metadata to completion API

--- a/chatbot/DockerfileDebug
+++ b/chatbot/DockerfileDebug
@@ -14,4 +14,4 @@ COPY . .
 # Expose port and start application
 EXPOSE 3000
 EXPOSE 9229
-CMD ["node", "--inspect=0.0.0.0:9229", "src/index.js"]
+CMD ["node", "--inspect=0.0.0.0:9229", "src/app.js"]
