--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "ai-job-chatbot",
+    "name": "ai-chatbot",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "app.js",
     "type": "module",
     "scripts": {
-      "start": "node src/index.js"
+      "start": "node src/app.js"
     },
     "dependencies": {
       "axios": "^1.4.0",
