--- a/embedding/package.json
+++ b/embedding/package.json
@@ -1,5 +1,8 @@
 {
-    "type": "module",
+  "name": "ai-embedding",
+  "version": "1.0.0",  
+  "type": "module",
+  "main": "app.js",
     "dependencies": {
       "dotenv": "^16.0.0",
       "express": "^4.18.0",
