Add document chunking logic

--- a/embedding/.env.example
+++ b/embedding/.env.example
@@ -1,7 +1,8 @@
 PORT=<YOUR PORT>
 OPENAI_API_KEY=<YOUR OPENAI_API_KEY>
 EMBEDDING_MODEL=<YOUR EMBEDING_MODEL>
+EMBEDDING_DIMENSION=<YOUR EMBEDDING_DIMENSION>
+CHUNK_SENTENCE_OVERLAP=<YOUR CHUNK_SENTENCE_OVERLAP>
 POSTGRESS_USERNAME=<YOUR POSTGRESS_USERNAME>
 POSTGRESS_PASSWORD=<YOUR POSTGRESS_PASSWORD>
 POSTGRESS_DBNAME=<YOUR POSTGRESS_DBNAME>
-MAX_DOCUMENT_SIZE=<YOUR MAX_DOCUMENT_SIZE>
