--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -12,6 +12,7 @@
       "express": "^4.18.2",
       "openai": "^4.0.0",
       "pg": "^8.13.1",
-      "ejs": "^3.1.10"
+      "ejs": "^3.1.10",
+      "xregexp": "^5.1.1"
     }
   }
