--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -12,7 +12,6 @@
       "express": "^4.18.2",
       "openai": "^4.0.0",
       "pg": "^8.13.1",
-      "ejs": "^3.1.10",
-      "xregexp": "^5.1.1"
+      "ejs": "^3.1.10"
     }
   }
