--- a/chatbot/.env.example
+++ b/chatbot/.env.example
@@ -3,4 +3,6 @@ OPENAI_API_KEY=<YOUR OPENAI_API_KEY>
 EMBEDDING_API_URL=<YOUR EMBEDDING_API_URL>
 OPENAI_COMPLETION_MODEL=<YOUR OPENAI_COMPLETION_MODEL>
 OPENAI_SYSTEM_MESSAGE=<YOUR OPENAI_SYSTEM_MESSAGE>
+OPENAI_PROMPT_MESSAGE=<YOUR OPENAI_PROMPT_MESSAGE>
+OPENAI_DOCUMENT_MESSAGE=<YOUR OPENAI_DOCUMENT_MESSAGE>
 DOCUMENT_SEARCH_LIMIT=<YOUR DOCUMENT_SEARCH_LIMIT>
