--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -8,10 +8,11 @@
     },
     "dependencies": {
       "axios": "^1.4.0",
+      "sprintf-js": "^1.1.3",
       "dotenv": "^16.0.0",
       "express": "^4.18.2",
       "openai": "^4.0.0",
       "pg": "^8.13.1",
-      "ejs": "^3.1.10"
+      "ejs": "^3.1.10"      
     }
   }
