--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -8,8 +8,8 @@
     },
     "dependencies": {
       "axios": "^1.4.0",
-      "sprintf-js": "^1.1.3",
-      "dotenv": "^16.0.0",
+      "config-yaml": "^1.1.6",
+      "sprintf-js": "^1.1.3",      
       "express": "^4.18.2",
       "openai": "^4.0.0",
       "pg": "^8.13.1",
