--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,11 @@ services:
   chatbot-app:
     build: 
       context: ./chatbot
-      #dockerfile: DockerfileDebug
-      dockerfile: Dockerfile
+      dockerfile: DockerfileDebug
+      #dockerfile: Dockerfile
     ports:
       - "${CHAT_APP_PORT}:${CHAT_APP_PORT}"
-      #- "9229:9229"
+      - "9229:9229"
     environment:
       - DATABASE_URL=postgresql://${POSTGRESS_USERNAME}:${POSTGRESS_PASSWORD}@postgresql:5432/${POSTGRESS_DBNAME}    
     depends_on:
