--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,19 +8,15 @@ services:
       - "${EMBEDDING_APP_PORT}:${EMBEDDING_APP_PORT}"
       #- "9229:9229"
     depends_on:
-      - postgresql
-    environment:
-      - DATABASE_URL=postgresql://${POSTGRESS_USERNAME}:${POSTGRESS_PASSWORD}@postgresql:5432/${POSTGRESS_DBNAME}
+      - postgresql    
   chatbot-app:
     build: 
       context: ./chatbot
-      dockerfile: DockerfileDebug
-      #dockerfile: Dockerfile
+      #dockerfile: DockerfileDebug
+      dockerfile: Dockerfile
     ports:
       - "${CHAT_APP_PORT}:${CHAT_APP_PORT}"
-      - "9229:9229"
-    environment:
-      - DATABASE_URL=postgresql://${POSTGRESS_USERNAME}:${POSTGRESS_PASSWORD}@postgresql:5432/${POSTGRESS_DBNAME}    
+      #- "9229:9229"    
     depends_on:
       - postgresql
   postgresql:
