--- a/embedding/package.json
+++ b/embedding/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "app.js",
     "dependencies": {
-      "dotenv": "^16.0.0",
+      "config-yaml": "^1.1.6",
       "express": "^4.18.0",
       "pg": "^8.8.0",
       "pgvector": "^0.1.0",
