--- a/chatbot/src/config/default.yml.example
+++ b/chatbot/src/config/default.yml.example
@@ -5,6 +5,7 @@ openai:
   api_key: "<YOUR OPENAI API KEY>"
   completion_model: "gpt-4"
 chat:
+  category: "test"
   messages:
     test:
       system: |
@@ -21,14 +22,16 @@ chat:
         - Please determinte the language of user prompt and respond in that language.
         Always focus on providing practical, actionable, and contextually appropriate advice to support the user's job search goals.
       prompt: "User Query: %s"
-      document: | 
-        Retrieved Documents:
-        
-        %s
-        
-        Use this information to respond to the user's query.        
+      document: "Retrieved Documents:\n\n%s\n\nUse this information to respond to the user's query."       
   document:
     limit: 5
+  history:
+    expiration_hours: 24
+session:
+  secret: "session secret"
+  resave: "false"
+  saveUninitialized: "true"
+  maxAge: 600000
 postgres:
   hostname: "<YOUR DB HOSTNAME>"
   port: "<YOUR DB PORT>"
