--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
       "axios": "^1.4.0",
+      "express-session": "^1.18.1",
       "config-yaml": "^1.1.6",
       "sprintf-js": "^1.1.3",      
       "express": "^4.18.2",
