--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       #dockerfile: DockerfileDebug
       dockerfile: Dockerfile
     ports:
-      - "${CHAT_APP_PORT}:${CHAT_APP_PORT}"
+      - "${CHATBOT_APP_PORT}:${CHATBOT_APP_PORT}"
       #- "9229:9229"    
     depends_on:
       - postgresql
