--- a/embedding/package.json
+++ b/embedding/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "main": "app.js",
     "dependencies": {
+      "express-basic-auth": "^1.2.1",
       "config-yaml": "^1.1.6",
       "express": "^4.18.0",
       "pg": "^8.8.0",
